# dshpot

./: .gitignore  Cargo.toml  README.md  entrypoint.sh  flake.nix  module.nix
.github/workflows/: build.yaml
src/: app.rs  args.rs  database.rs  lib.rs  logging.rs  main.rs  metrics.rs  prelude.rs  schema.sql  ssh.rs
