[package]
name = "dshpot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
russh = { version = "0.57.0", features = ["async-trait"] }
rand_core = "0.10.0-rc-3"
rand = "0.8"
russh-keys = "0.49.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
